--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.28",
+    "expo": "^45.0.8",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
