--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "^51.0.32",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -28,9 +30,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-maps": "^1.18.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
