--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@expo/vector-icons": "^14.0.2",
-
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
@@ -31,7 +31,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
-
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.18.0",
     "react-native-reanimated": "~3.10.1",
